welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:8: error: ')' expected but ';' found.
	if (baggle <=2; compteur =5)
                      ^Poucet:8: error: ';' expected but ')' found.
	if (baggle <=2; compteur =5)
                                   ^Poucet:10: error: ';' expected but ')' found.
	if (baggle >=3;compteur =5)
                                  ^